# colossus

./: .gitignore  CONVENTIONS.md  Cargo.toml  OPENAI_REALTIME.md  PROJECT.md  README.md  TEST_PLAN.md
src/: architect.rs  cli.rs  developer.rs  init.rs  main.rs  product_manager.rs  project_manager.rs  tester.rs
src/html/: index.html
src/js/: app.js
static/: app.js  index.html
