[package]
description = "Colossus is a powerful tool for AI-driven text processing and analysis."
license = "MIT"
name = "colossus"
version = "0.2.2"
edition = "2021"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
ratatui = "0.20"
crossterm = "0.26"
dotenv = "0.15"
figlet-rs = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.16"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
fs2 = "0.4"
